--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 <body>
     <h1>Bienvenidos a mi blog</h1>
     <p> Este es un blog basico creado con Git y Git hub</p>
+    <h2>Formulario de Contacto</h2>
+    <form action="/enviar" method="post">
+        <label for="nombre">Nombre:</label><br>
+        <input type="text" id="nombre" name="nombre" required><br><br>
+        <label for="email">Correo electrónico:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+        <input type="submit" value="Enviar">
+    </form>
 </body>
 </html>
