Agregue mi nombre y mi hobbie

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
         <input type="email" id="email" name="email" required><br><br>
         <input type="submit" value="Enviar">
     </form>
+    <section>
+        <h2>Sobre mi</h2>
+        <p>Mi nombre es Miriam Angulo y mi hobbie es leer</p>
+    </section>
 </body>
 </html>
